--- a/Kaiserreich Korean Translation/localisation/KR_Honduras_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Honduras_l_english.yml
@@ -1,23 +1,23 @@
-﻿l_english:
+l_english:
 ### Parties ###
 HON_totalist_party_long:0 "국민혁명운동"
 HON_totalist_party:0 "국민혁명운동"
-HON_syndicalist_party_long:0 "온두라스 생디칼리스트당"
-HON_syndicalist_party:0 "온두라스 생디칼리스트당"
-HON_radical_socialist_party_long:0 "온두라스 혁명민주주의당"
+HON_syndicalist_party_long:0 "온두라스생디칼리스트당"
+HON_syndicalist_party:0 "온두라스생디칼리스트당"
+HON_radical_socialist_party_long:0 "온두라스혁명민주주의당"
 HON_radical_socialist_party:0 "온두라스 혁명민주주의당"
 HON_social_democrat_party_long:0 "Partido de Innovación y Unidad-Social Democracia"
 HON_social_democrat_party:0 "PIUSD"
-HON_social_liberal_party_long:0 "온두라스 자유당"
-HON_social_liberal_party:0 "온두라스 자유당"
+HON_social_liberal_party_long:0 "온두라스자유당"
+HON_social_liberal_party:0 "온두라 자유당"
 HON_market_liberal_party_long:0 "민주연합당"
 HON_market_liberal_party:0 "PUD"
-HON_social_conservative_party_long:0 "온두라스 민족당"
-HON_social_conservative_party:0 "온두라스 민족당"
+HON_social_conservative_party_long:0 "온두라스국민당"
+HON_social_conservative_party:0 "온두라스국민당"
 HON_authoritarian_democrat_party_long:0 "Partido Anticorrupción"
 HON_authoritarian_democrat_party:0 "PA"
-HON_paternal_autocrat_party_long:0 "온두라스 애국동맹당"
-HON_paternal_autocrat_party:0 "온두라스 애국동맹당"
+HON_paternal_autocrat_party_long:0 "온두라스애국동맹당"
+HON_paternal_autocrat_party:0 "온두라스애국동맹당"
 HON_national_populist_party_long:0 "Frente Hondureño para la Salvación Nacional"
 HON_national_populist_party:0 "FHSN"
 HON_paternal_autocrat_americans_party:0 "AGPP"
@@ -28,13 +28,13 @@ HON_peasant_republic:0 "농민 공화국"
 HON_peasant_republic_desc:0 "Honduras is a 'peasant republic', that is to say it is run by the council in the name of the peasantry and its official name is the Peasants and Workers Republic of Honduras. In practice however, this government is moribund and has ceased to represent the people."
 HON_december_revolution:0 "12월 혁명"
 HON_december_revolution_desc:0 "The December Revolution took place in 1932, when peasants occupied the capital and a loose coalition of different groups took power as the "Peasant's Council of Honduras". Now the revolution is regarded as something of a failure, or possibly as having not gone far enough..."
-HON_great_purge:0 "대숙청"
+HON_great_purge:0 "대숙처 "
 HON_great_purge_desc:0 "The Great Purge was a mass persecution of members of the army primarily, who had links to America. While the commercial realities of the situation would mean that American influence crept back in and the Monroe Doctrine remained enforced it still crippled the Honduran army, which is something I guess?"
 HON_bananas_america:0 "미합중국으로의 바나나 수출"
 
-HON_army_reform_prof_idea:0 "Army Reformation"
-HON_army_prof_equi_idea1:0 "Standardized Equipment"
-HON_army_prof_equi_idea2:0 "Standardized Equipment"
+HON_army_reform_prof_idea:0 "육군 개혁"
+HON_army_prof_equi_idea1:0 "장비 현대화"
+HON_army_prof_equi_idea2:0 "장비 현대화"
 HON_army_prof_officer_idea1:0 "Professional Officers"
 HON_army_prof_officer_idea2:0 "Professional Officers"
 HON_army_prof_officer_idea3:0 "Professional Officers"
@@ -54,10 +54,15 @@ HON_yellow_press:0 "Yellow Press"
 HON_naval_air_coord_idea1:0 "Naval Air Coordination"
 HON_naval_air_coord_idea2:0 "Naval Air Coordination"
 HON_anti_syndie_media:0 "Yellow Press"
-HON_mancha_brava:0 "The Mancha Brava"
+HON_mancha_brava:0 "La Mancha Brava"
 
+HON_empowering_the_workers_idea:0 "Empowering the Workers"
+
+HON_empowering_workers_idea:0 "Empowering the Workers"
+HON_empowering_workers_idea_desc:0 "We must work to strengthen the position of the common worker within Honduras so as to ensure fair and proper working conditions and honour those that work hard to keep the state a beacon of economic activity."
 
 #FLAGS
+HON_shh_cancel:0 "Has cancelled this border war via effect"
 
 
 #Events
@@ -82,32 +87,32 @@ honduras.203.c:0 "See if the English are open for business."
 honduras.203.e:0 "We'll make our own."
 honduras.210.t:0 "Acquiring Fighters"
 honduras.210.d:0 "Air power will be the cornerstone of the modern age, so they say."
-honduras.210.a:0 "Buy German"
-honduras.210.b:0 "Buy American"
-honduras.210.c:0 "Buy Japanese"
-honduras.210.e:0 "Buy British"
+honduras.210.a:0 "Buy German."
+honduras.210.b:0 "Buy American."
+honduras.210.c:0 "Buy Japanese."
+honduras.210.e:0 "Buy British."
 honduras.210.f:0 "Support Honduran aircraft manufacturing! When it exists."
 honduras.211.t:0 "Acquiring CAS Aircraft"
 honduras.211.d:0 "Air Support is a vital part of any airforce."
-honduras.211.a:0 "Buy Japanese"
-honduras.211.b:0 "Buy German"
-honduras.211.c:0 "Buy Canadian"
-honduras.211.e:0 "Buy British"
-honduras.211.f:0 "Let's not waste our money"
-honduras.212.t:0 "Acquiring bombers Aircraft"
+honduras.211.a:0 "Buy Japanese."
+honduras.211.b:0 "Buy German."
+honduras.211.c:0 "Buy Canadian."
+honduras.211.e:0 "Buy British."
+honduras.211.f:0 "Let's not waste our money."
+honduras.212.t:0 "Acquiring bomber Aircraft"
 honduras.212.d:0 "Bombing is a vital part of any airforce."
-honduras.212.a:0 "Buy Japanese"
-honduras.212.b:0 "Buy German"
-honduras.212.c:0 "Buy Canadian"
-honduras.212.e:0 "Buy British"
-honduras.212.f:0 "Let's not waste our money"
+honduras.212.a:0 "Buy Japanese."
+honduras.212.b:0 "Buy German."
+honduras.212.c:0 "Buy Canadian."
+honduras.212.e:0 "Buy British."
+honduras.212.f:0 "Let's not waste our money."
 honduras.213.t:0 "Acquiring CAS Aircraft"
 honduras.213.d:0 "Naval bombing is a vital part of any airforce."
-honduras.213.a:0 "Buy Japanese"
-honduras.213.b:0 "Buy German"
-honduras.213.c:0 "Buy Canadian"
-honduras.213.e:0 "Buy British"
-honduras.213.f:0 "Let's not waste our money"
+honduras.213.a:0 "Buy Japanese."
+honduras.213.b:0 "Buy German."
+honduras.213.c:0 "Buy Canadian."
+honduras.213.e:0 "Buy British."
+honduras.213.f:0 "Let's not waste our money."
 honduras.220.t:0 "Outfitting the Honduran Navy - Destroyers"
 honduras.220.d:0 "A pair of destroyers will be the ideal additions to the Honduran naval arsenal."
 honduras.220.a:0 "Buy them from abroad."
@@ -295,7 +300,7 @@ honduras.103.a:0 "Well at least it can't get worse."
 
 honduras.104.t:0 "Into El Salvador"
 honduras.104.d:0 "The militants have fled into El Salvador, hoping to base themselves there and stage a proper campaign of guerrilla warfare to overthrow the council. However it seems our soldiers show no signs of giving up the chase..."
-honduras.104.a:0 "I spoke too soon"
+honduras.104.a:0 "I spoke too soon."
 
 honduras.105.t:0 "Military Clashes with El Salvador"
 honduras.105.d:0 "It seems our abortive attempt at a swift arrest has escalated beyond our control, with an open firefight breaking out between our army and theirs."
@@ -446,7 +451,7 @@ HON_callejas_desc:0 "The Callejistas and their revolutionary programme have ente
 HON_state_atheism:0 "State Atheism"
 HON_state_atheism_desc:0 "Though Catholicism has deep roots they must be dug up, the church is an implement of reactionary thought."
 HON_totalist_youth:0 "Red Shirts"
-HON_totalist_youth_desc:0 "Wearing their fine red shits, our youth wing is ready to provide volunteers for the revolution."
+HON_totalist_youth_desc:0 "Wearing their fine red shirts, our youth wing is ready to provide volunteers for the revolution."
 HON_patriotic_front:0 "Patriotic Front"
 HON_patriotic_front_desc:0 "So long as they agree to root out reactionary thought within their own ranks, the Callejistas are more than willing for form a united front with other leftists."
 HON_diplomatic_missions:0 "Organize Diplomatic Missions"
@@ -485,8 +490,8 @@ HON_collective_housing:0 "Collective Housing"
 HON_collective_housing_desc:0 "In order to assure homes for all the people of Honduras we should abolish the family, and instead encourage people to cohabit in large dormitories with shared living space."
 HON_end_rivalry:0 "End the Rivalry"
 HON_end_rivalry_desc:0 "The rivalry between the two of us must end, for what are we if not brothers in the quest for socialism?"
-### Military Trees 
-## Army 
+### Military Trees
+## Army
 
 HON_state_army:0 "State of the Army"
 HON_state_army_desc:0 "We're currently still suffering the effect of last year's army purge. If we wish to get our army back on its feet, we shall need to start assessing the status of the army."
