--- a/Kaiserreich Korean Translation/localisation/KR_Loading_Tips_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Loading_Tips_l_english.yml
@@ -63,7 +63,7 @@ LOADING_TIP_60:0 "어떤 대의도 잃거나 승리할 수 없다; 싸움은 항
 LOADING_TIP_61:0 "26종류의 치즈가 있는 나라에서 어떻게 하나의 정당을 가질 수 있지? \n- 샤를 드 골, 프랑스 코뮌에 대하여"
 LOADING_TIP_62:0 "나는 당신을 좋아하지 않고, 당신도 나를 좋아하지 않지. 하지만 이제 우리는 같은 처지에 있고 러시아를 구하기 위해 모든 조치를 취해야 할 거요. \n- 라브르 코르닐로프가 보리스 사빈코프에게, 1918년"
 LOADING_TIP_63:0 "반동은 눈부신 진보의 등불 앞에 굳건히 서 있습니다. 그리고 여기 그림자를 드리우면서 우리는 국가의 구분과 정체성의 근원을 발견합니다. \n- 대니얼 개리티 신부"
-LOADING_TIP_64:0 "헤겔은 세계의 모든 위대한 역사적 사실과 인물이 두 번이나 등장한다고 어딘가에서 말하고 있다. 그는 덧붙이는 것을 잊었다; 첫번째는 비극으로, 두번째는 익살거리로. \N -칼 마르크스"
+LOADING_TIP_64:0 "헤겔은 세계의 모든 위대한 역사적 사실과 인물이 두 번이나 등장한다고 어딘가에서 말하고 있다. 그는 덧붙이는 것을 잊었다; 첫번째는 비극으로, 두번째는 익살거리로. \n -칼 마르크스"
 LOADING_TIP_65:0 "우리의 다음 전쟁은 우리 나라와 인류의 최고의 이익을 위해 싸울 것이다. 이것은 세계 역사에 중요성을 가지고 투자할 것이다. "세계적인 강대국이냐 멸망이냐"는 우리의 부르짖는 외침이 될 것입니다. \n- 프리드리히 폰 베른하르디, 독일과 다음 전쟁에 대해서"
 LOADING_TIP_66:0 "선전 담당자의 목적은 한 집단의 사람들로 하여금 특정한 다른 집단의 사람들이 인간이라는 것을 잊게 하는 것이다. \n- 올더스 헉슬리"
 LOADING_TIP_67:0 "레닌은 독일인들에 의해 러시아로 보내졌는데, 이는 장티푸스나 콜레라균이 포함된 약병을 대도시의 급수에 투입하기 위해 보낸 것과 같은 방식이었다. \n- 윈스턴 처칠"
