--- a/Kaiserreich Korean Translation/localisation/KR_Mexico_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Mexico_l_english.yml
@@ -104,6 +104,7 @@ MEX_junta_holds_on_flag:0 "군부가 권력을 장악하다"
 MEX_the_1937_elections_happened:0 "1937년 대통령 선거가 실시되었다"
 MEX_claimed_lost_territories:0 "우리는 잃어버린 영토의 영유권을 주장했다"
 MEX_joined_ACW:0 "우리는 현재 미국 내전에 개입하고 있다."
+MEX_junta_goldshirt_alliance:0 "우리는 황금셔츠단과 연정을 이루었다."
 
 
 ### Decisions ###
@@ -758,7 +759,7 @@ mexico.45.d:0 "시나키스타가 본색을 드러냈습니다. 호세 안토니
 mexico.45.a:0 "피할 수 없는 배신을 저주한다"
 
 mexico.46.t:0 "민주주의를 복원하겠습니까?"
-mexico.46.d:0 "반란을 진압하기 위해서, 민주주의의 외형을 회복하는 것은 좋을 것입니다. 군부가 분명히 영향력을 행사하겠지만, 우리는 민주주의를 회복하고, 멕시코 국가주의당(PNM)이 멕시코를 인도할 것입니다. 이것은 갈등을 해결하는 데 도움이 될 것입니다."
+mexico.46.d:0 "Sinarquist의 제안을 우리가 거부하면서, 우리는 반란을 해치울 또다른 선택지가 있습니다. 반란을 진압하기 위해서, 민주주의의 외형을 회복하는 것은 좋을 것입니다. 군부가 분명히 영향력을 행사하겠지만, 우리는 민주주의를 회복하고, 멕시코 국가주의당(PNM)이 멕시코를 인도할 것입니다. 이것은 갈등을 해결하는 데 도움이 될 것입니다."
 mexico.46.a:0 "민주주의를 복원한다"
 mexico.46.b:0 "권력을 유지한다"
 
@@ -780,13 +781,13 @@ mexico.50.a:0 "우리는 이 반란군들을 파괴할 것이다"
 
 mexico.51.t:0 "농민 전쟁 - 과달라하라 전투"
 mexico.51.d:0 "멕시코 군대는 과달라하라 시를 점령하려는 판초 비야에 의해 소위 해방군 지도자와 마주하고 있습니다. 페드로 오제다 멕시코 군 사령관은 이 도시를 방어하기 위해 준비하고 있지만, 그는 결과가 어떻든 간에 이번 전투는 피비린내 나는 전투가 될 것이라고 우려하고 있습니다. 피와 먼지가 가라앉고, 승자는..."
-mexico.51.a:0 "멕시코 군대"
-mexico.51.b:0 "농민 해방군"
+mexico.51.a:0 "자유의 농민군."
+mexico.51.b:0 "멕시코 군대."
 
 mexico.52.t:0 "농민 전쟁 - 셀라야 전투"
 mexico.52.d:0 "멕시코 군대는 농민군이 주둔하고 있는 셀라야 마을 근처에서 농민군과 대치하고 있습니다. 이 공격을 지휘하는 멕시코 군 사령관인 헤수스 페레이라는 그들을 쫓아낼 수 있다고 믿지만 그는 또한 그것이 피비린내 나는 전투가 될 것이라는 것을 알고 있습니다. 결과는..."
-mexico.52.a:0 "멕시코 군대가 승리하였다"
-mexico.52.b:0 "농민군이 승리하였다"
+mexico.52.a:0 "농민군이 승리하였다."
+mexico.52.b:0 "멕시코 군대가 승리하였다."
 
 mexico.53.t:0 ""
 mexico.53.d:0 ""
