--- a/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -3485,9 +3485,9 @@ NIC_LIB_totalist_ADJ:0 "니카라과"
 NIC_LIB_totalist_DEF:0 "니카라과"
 
 
-mittelafrika_formed_authoritarian_democrat:0 "미텔아프리카"
-mittelafrika_formed_authoritarian_democrat_DEF:0 "미텔아프리카"
-mittelafrika_formed_authoritarian_democrat_ADJ:0 "미텔아프리카"
+mittelafrika_formed_authoritarian_democrat:0 "미틀아프리카"
+mittelafrika_formed_authoritarian_democrat_DEF:0 "미틀아프리카"
+mittelafrika_formed_authoritarian_democrat_ADJ:0 "미틀아프리카"
 
 RAS_ARB_totalist:0 "아라비아 코뮌"
 RAS_ARB_totalist_ADJ:0 "아라비아"
