--- a/Kaiserreich Korean Translation/localisation/KR_Morocco_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Morocco_l_english.yml
@@ -179,6 +179,34 @@ MOR_freedom_and_justice_desc:0 "We emphasise that under the rule of Mohammed V t
 MOR_direct_rule_from_marrakesh:0 "마라케시로부터의 직접 통치"
 MOR_direct_rule_from_marrakesh_desc:0 "The other factions fail to see that our revolution is at risk by failing to implement a centralised government. We must save our people from themselves so that we do not succumb to bourgeois democracy. To ensure that our future is secure we must lay the foundation for true democracy under democratic centralism and the principles of Totalism"
 
+### Ideas ###
+MOR_royal_budget_rearengment_idea:0 "Royal Budget Adjustment"
+MOR_royal_budget_rearengment_idea_desc:0 ""
+MOR_developmnet_plan_idea:0 "개발 계획"
+MOR_developmnet_plan_idea_desc:0 ""
+MOR_foreign_industrial_expertise_idea:0 "Foreign Industrial Expertise"
+MOR_foreign_industrial_expertise_idea_desc:0 ""
+MOR_modern_army_hierarchy_idea:0 "Modern Army Hierarchy"
+MOR_modern_army_hierarchy_idea_desc:0 ""
+MOR_moroccan_officer_schools_idea:0 "Officer Academy"
+MOR_moroccan_officer_schools_idea_desc:0 ""
+MOR_enlist_the_berber_horsemen_idea:0 "Berber Horsement"
+MOR_enlist_the_berber_horsemen_idea_desc:0 ""
+MOR_francophobe_rethoric_idea:0 "Francophobia"
+MOR_francophobe_rethoric_idea_desc:0 ""
+MOR_new_laws_for_new_times_idea:0 "현대화된 사법 체계"
+MOR_new_laws_for_new_times_idea_desc:0 ""
+MOR_light_of_africa_idea:0 "아프리카의 빛"
+MOR_light_of_africa_idea_desc:0 ""
+MOR_a_legacy_of_a_thousand_years_idea:0 "천년의 유산"
+MOR_a_legacy_of_a_thousand_years_idea_desc:0 ""
+MOR_new_uniforms_and_training_drills_idea:0 "새로운 톱니, 새로운 드릴"
+MOR_new_uniforms_and_training_drills_idea_desc:0 ""
+MOR_watch_over_the_straits_idea:0 "해협 감시"
+MOR_watch_over_the_straits_idea_desc:0 ""
+MOR_germanmission_idea:0 "독일 군사 고문단"
+MOR_germanmission_idea_desc:0 ""
+
 ###Events###
 mor.1.t:0 "모로코의 역사"
 mor.1.d:0 "In 1904, France and Spain carved out zones of influence in Morocco. Recognition by the United Kingdom of France's sphere of influence provoked a strong reaction from the German Empire; and a crisis loomed in 1905. The matter was resolved at the Algeciras Conference in 1906. The Agadir Crisis of 1911 increased tensions between European powers. The 1912 Treaty of Fez made Morocco a protectorate of France, and triggered massive riots. By the same treaty, Spain assumed the role of protecting power over the northern and southern Saharan zones. During the Weltkrieg, the Zaian Confederation of Berbers rebelled against France and recieved ample Central Power support, but failed to score major victories until the fall of France. While there were negotiations with pretenders by Germany, they were inconclusive, and in the end Mohhamed V was placed in the thore after his father abidcated. A new treaty was put in place by Germany, and it's influence on internal moroccan matters is greatly diminished when in relation to the French Protectroate, and the treaty is carefully worded as to present it as an amicably as possible. However, tensions still flare up occasionaly, and that's when the German backed Royal Guard has to intervene. As the 30s roared in, Morroco recovered from the Protectorate era, but still remain nervous relations with France, to the point that even some nationalists advocate continue the alliance with German to ensure independence is secured. Now not only the old revanchist elites of France, but the savage revolutionaries in Paris eye Morocco as a gateway for the revolution into Africa and the Islamic World."
