--- a/Kaiserreich Korean Translation/localisation/KR_Ottoman_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ottoman_l_english.yml
@@ -1157,7 +1157,7 @@ ott.178.a:0 "우리 군대가 승리할 수 있기를 바란다!"
 ott.179.t:0 "바그다드 조약"
 ott.179.d:0 "우리는 페르시아 군대에 의해 패배당했습니다. 어쩌다가 이렇게 됐지? 그들은 유프라테스 강 동쪽에 있는 우리의 영토를 모두 점령했고 심지어 아나톨리아의 일부를 차지했습니다! 우리가 할 수 있는 한 그들에게 평화를 제의해야 합니다!"
 ott.179.a:0 "페르시아의 영토를 획득하고 평화 협정을 제의한다."
-ott.179.b:0 "아니, 우리가 테헤란으로 행진할 때까지 전쟁은 계속될 것이다!"
+ott.179.b:0 "아니, 우리가 [266.GetName]으로 행진할 때까지 전쟁은 계속될 것이다!"
 
 ott.180.t:0 "바그다드 조약"
 ott.180.d:0 "우리는 오스만 제국의 군대를 성공적으로 물리쳤고 그들 제국의 상당 부분을 정복했습니다. 이제 오스만 제국의 지도력은 우리에게 우리의 영토 획득을 인정하고 분쟁 지역에서 철수할 것을 약속하는 평화를 제안합니다. 어떻게 반응할까요?"
@@ -1385,34 +1385,34 @@ ottaxis.131.t:0 "오스만의 지배로부터 해방되다"
 ottaxis.131.d:0 "오스만과 그들의 적들 간의 평화 조약의 일부로, [Root.GetNameDef]은(는) 오스만 정부와 모든 관계를 단절했습니다. 우리는 이제 자유롭고 독립적인 국가로서 우리가 원하는 대로 행동할 수 있습니다."
 ottaxis.131.a:0 "사랑스럽군"
 
-ottaxis.200.t:0 "테헤란 조약"
+ottaxis.200.t:0 "[266.GetName] 조약"
 ottaxis.200.d.egypt:0 "많은 싸움 끝에 오스만 제국은 패했습니다. 우리는 그들의 많은 도시들을 점령했고 오스만의 철권통치로부터 수천 명을 해방시켰습니다. 이제 우리는, 카이로 조약과 함께 환자를 정복하였고, 우리는 전리품으로 무엇을 할 것인지 선택할 수 있습니다. 우리는 우리가 주장한 것을 가지고 나머지는 카이로 조약에 맡길 수 있습니다. 그러나 우리는 이집트와 동맹이 아닙니다. 우리는 우리와 이집트인 사이의 완충국으로서 시리아에 괴뢰 정권을 수립할 기회가 있으며, 그들이 그러한 움직임을 인정하지 않는다면, 그들은 우리와 전쟁을 해야 합니다..."
 ottaxis.200.d.noegypt:0 "많은 싸움 끝에 오스만 제국은 패했습니다. 우리는 그들의 많은 도시들을 점령했고 오스만의 철권통치로부터 수천 명을 해방시켰습니다. 이제 우리는 환자를 정복하였고, 우리는 전리품으로 무엇을 할 것인지 선택할 수 있습니다. 우리는 시리아에 괴뢰 정권을 만들지, 아니면 단순히 중동 지역에 있는 모든 오스만 땅을 가져가고 나중에 무엇을 할지 결정할 수 있습니다"
 ottaxis.200.a:0 "우리의 요구를 받아들이고 나머지는 카이로 조약에 맡긴다"
 ottaxis.200.b:0 "이집트를 차단하기 위해 시리아에 괴뢰 정권을 구축한다"
 ottaxis.200.c:0 "영토를 장악한다 - 우리는 나중에 그것을 어떻게 할지 결정할 것이다"
 
-ottaxis.201.t:0 "테헤란 조약"
+ottaxis.201.t:0 "[266.GetName] 조약"
 ottaxis.201.d:0 "이제 오스만 제국은 카이로 조약에 있는 동맹국들의 연합된 노력과 [PER.GetNameDefCap]의 큰 도움 덕분에 패배하였고, 이제 우리는 그 전리품을 우리끼리 나누어야 합니다. 이란은 오스만을 상대로 많은 일을 한 끝에 자신들의 주장을 먼저 취했고, 그들이 점령하기로 약속한 것에 대해서만 이득을 제한했습니다. 이제 우리는 우리 자신의 이익을 가지고 무엇을 해야 할지 결정해야 합니다."
 ottaxis.201.a:0 "레반트를 받고 나머지는 모두 우리의 동맹국에게 나눠주어라"
 ottaxis.201.b:0 "우리는 아랍인들이 어떻게 생각하든지 간에 우리가 얻은 것을 유지할 것이다"
 ottaxis.201.c:0 "우리는 나중에 그것을 어떻게 할지 결정할 것이다"
 
-ottaxis.202.t:0 "테헤란 조약 : 아라비아의 요구"
+ottaxis.202.t:0 "[266.GetName] 조약 : 아라비아의 요구"
 ottaxis.202.d:0 "이제, 오스만 제국의 패배와 함께, 우리는 우리의 요구사항을 만들 수 있습니다. 비록 우리가 하나의 깃발 아래 아랍 민족들을 통합시킬 수는 없지만, 이집트는 우리에게 헤자즈 땅을 남겼고, 아무것도 없는것보다는 낫습니다."
 ottaxis.202.a:0 "오스만이 패배하며 우리가 떠올랐다"
 
-ottaxis.203.t:0 "테헤란 조약"
+ottaxis.203.t:0 "[266.GetName] 조약"
 ottaxis.203.d:0 "배신입니다! [PER.GetNameDef]은(는) 오스만과 평화 협상을 이끌었으며, 헤자즈를 이집트인들의 통제하에 넘겨주었고 그들은 그것을 가지기로 결정했습니다! 우리가 가져갈 것은 아무것도 없습니다. 수천 명의 아랍 병사들이 연합을 위해 목숨을 바쳤지만 우리는 그것으로부터 아무것도 얻지 못했습니다. 카이로 조약 동맹은 이집트인들에게 아무런 의미가 없는 것이 분명합니다. 그리고 [PER.GetNameDefCap]은(는) 오스만의 공백을 메우고 있습니다."
 ottaxis.203.a:0 "명백히 그 조약은 의미가 없다"
 
-ottaxis.204.t:0 "테헤란 조약"
+ottaxis.204.t:0 "[266.GetName] 조약"
 ottaxis.204.d:0 "오스만은 패배했지만, [PER.GetNameDef]은(는) 평화 협상을 주도하여 그들이 약속한 것보다 훨씬 더 많은 레반트의 땅을 주장하고 있다는 것을 발견했습니다. 이것은 우리에게 매우 적은 것을 남겨주었고, 우리의 동맹국들에게는 거의 아무것도 남겨주지 않았습니다."
 ottaxis.204.a:0 "레반트를 받고 나머지는 모두 우리의 동맹국에게 나눠주어라"
 ottaxis.204.b:0 "우리는 아랍인들이 어떻게 생각하든지 간에 우리가 얻은 것을 유지할 것이다"
 ottaxis.204.c:0 "이것으로 충분하다"
 
-ottaxis.205.t:0 "테헤란 조약"
+ottaxis.205.t:0 "[266.GetName] 조약"
 ottaxis.205.d:0 "[PER.GetAdjective] 정부는 오스만과의 평화 협상에서 주도권을 잡았지만 어찌되었든 결국 우리의 노력에 대해 보여줄 것이 아무것도 없다는 말이 나오고 있습니다. 이집트인들은 오스만이 소유하고 있지 않은 헤자즈를 우리에게 줄 수 없다고 말하는데, 아마도 그것은 사실일 것입니다... 그렇다면 왜 우리 군인들은 모두 전장에서 죽었을까요?"
 ottaxis.205.a:0 "실망스럽더라도 우리는 동맹이 필요하다"
 ottaxis.205.b:0 "우리는 조약을 더 이상 필요로 하지 않는다"
