--- a/Kaiserreich Korean Translation/localisation/KR_Austria_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Austria_l_english.yml
@@ -1107,7 +1107,7 @@ ausgleich.new.343.a:0 "확실히 그들에게 귀중한 교훈이다.."
 ausgleich.new.344.t:0 "대타협의 결과: 트란스카르파티아 양도"
 
 ausgleich.new.345.t:0 "대타협의 대표단 복귀"
-ausgleich.new.345.d:0 "대타협의 재협상에 참여한 우리 대표단은 오늘 카라코우에 도착했습니다. 우리측에서 큰 외교적 돌파구가 만들어지지는 않았지만, 최소한 빈과 긴밀한 관계를 맺을 수 있었습니다."
+ausgleich.new.345.d:0 "대타협의 재협상에 참여한 우리 대표단은 오늘 크라코우에 도착했습니다. 우리측에서 큰 외교적 돌파구가 만들어지지는 않았지만, 최소한 빈과 긴밀한 관계를 맺을 수 있었습니다."
 ausgleich.new.345.a:0 "확실히 그들에게 귀중한 교훈이다."
 
 ausgleich.new.346.t:0 "대타협의 결과: 바치카 양도"
