--- a/Kaiserreich Korean Translation/localisation/KR_Political_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Political_l_english.yml
@@ -12,15 +12,18 @@ party_pop_0_70:0 "70-80% 정당 인기도"
 party_pop_0_80:0 "80-90% 정당 인기도"
 party_pop_0_90:0 "90-100% 정당 인기도"
 
+### syndicalist_soc_dem_notice_container ###
+SYNDIE_SOC_DEM_NOTICE:0 "(생디칼리스트 제휴)"
+
 ### Starting Events ###
-kr.political.24.t:0 "카이저라이히 Alpha 0.8.3 - '크리스마스 정전'"
-kr.political.24.d:0 "카이저라이히 개발진이 Alpha 0.8.3- '크리스마스 정전'버전을 하츠오브아이언4에 선사합니다! 지난 몇 달간 저희 개발진은 세계 구석구석을 모딩하였고, 이 작업물을 여러분에게 선보이게 되었습니다. 저희가 열심히 작업한만큼 여러분이 즐겁게 플레이하시기를 바랍니다. 한가지 알고 계셔야할 것은, 저희는 이 모드를 만들 때, 여러분이 평화회담에서 가능한 모든 지역을 가져간다는 전제하에 개발을 하였습니다, 따라서 그렇게 해주시길 바랍니다! \n\n또한 이 모드가 아직 알파버전인 것을 명심해주세요. 때문에 많은 버그들, 충돌 그 외 골치아픈 문제들이 발생할 수 있습니다. 만약 상기한 문제들을 발견하신다면, 깃허브의 버그트래커에 글을 남겨주세요.  만약 하고 싶은 질문이 있으시다면, 망설이지 마시고 질문해주세요, 다만 질문전에 게임 내에 있는 질의응답란을 먼저 확인해주세요.\n\n즐겁게 플레이하세요! \n                - 카라 개발진 일동, 개발진 목록은 크레딧란에서 보실 수 있습니다."
+kr.political.24.t:0 "카이저라이히 Alpha 0.8.4a - 'La Bella Antillana'"
+kr.political.24.d:0 "카이저라이히 개발진이 Alpha 0.8.4a- 'La Bella Antillana'버전을 하츠오브아이언4에 선사합니다! 지난 몇 달간 저희 개발진은 세계 구석구석을 모딩하였고, 이 작업물을 여러분에게 선보이게 되었습니다. 저희가 열심히 작업한만큼 여러분이 즐겁게 플레이하시기를 바랍니다. 한가지 알고 계셔야할 것은, 저희는 이 모드를 만들 때, 여러분이 평화회담에서 가능한 모든 지역을 가져간다는 전제하에 개발을 하였습니다, 따라서 그렇게 해주시길 바랍니다! \n\n또한 이 모드가 아직 알파버전인 것을 명심해주세요. 때문에 많은 버그들, 충돌 그 외 골치아픈 문제들이 발생할 수 있습니다. 만약 상기한 문제들을 발견하신다면, 깃허브의 버그트래커에 글을 남겨주세요.  만약 하고 싶은 질문이 있으시다면, 망설이지 마시고 질문해주세요, 다만 질문전에 게임 내에 있는 질의응답란을 먼저 확인해주세요.\n\n즐겁게 플레이하세요! \n                - 카라 개발진 일동, 개발진 목록은 크레딧란에서 보실 수 있습니다."
 kr.political.24.a:0 "카이저라이히 개발진분들 고맙습니다!"
 kr.political.24.c:0 "궁금증을 풀어줄 만한게 있을까요?"
 kr.political.24.e:0 "뭔가 놓친게 있는 것 같아..."
 
 kr.political.25.t:0 "질의응답"
-kr.political.25.d:0 "왜 아무것도 속국화 할 수 없습니까?\n속국화는 평화회담이 아닌, 이벤트나 국가중점을 통해 이루어집니다.\n\n다음 업데이트는 언제 나와요?\n우리는 3달마다 중요 업데이트를 진행합니다, 물론 필요에 따라 핫픽스를 제공합니다.\n\n일부 모델이 검은색으로 나오는데요?\n우리는 DLC에셋을 일부 사용 중입니다, 따라서 DLC가 없으시다면 일부는 검은색 텍스쳐가 나올겁니다. 다만 안심하세요 그저 사소한 오류일뿐입니다. 이 문제를 해결하기 위해 텍스쳐 작업 중에 있으니, 업데이트를 확인해주세요.\n\n카이저라이히의 버그 테스트/아트/음악/코딩 작업을 하고 싶습니다, 어디서 연락을 취할 수 있을까요?\n좋습니다! 우리의 디스코드나 포럼에 글을 쓰시거나, Zankoas에게 메세지를 남겨주세요.\n\n업데이트로 세이브파일이 꺠졌습니다!\n그건 질문대상이 아닙니다. 하지만 그 문제를 겪고 계신다면 세이브파일을 불러오시고 일시중지하지 마시고 다시 저장하신 다음, 다시 그걸 불러와보세요. 철인모드를 켜지 않는 것도 도움이 됩니다. 모두 안먹힌다면, 카이저라이히 포럼에서 이전버전을 받을 수 있다는 것을 명심하세요.\n\n카이저라이히와 관련된 다른게 있나요?\n오직 창작마당에 올려져 있는 음악모드 뿐입니다. 창작마당이나 포럼에서 찾을 수 있으니, 금방 찾을 수 있기를 바래요."
+kr.political.25.d:0 "왜 아무 국가도 속국화 할 수 없나요?\n     속국화는 평화회담이 아닌, 이벤트나 국가중점을 통해 이루어집니다.\n\n다음 업데이트는 언제 나와요?\n     저희는 3개월마다 중요 업데이트를 진행하고 있습니다. 물론 필요에 따라 핫픽스를 제공합니다.\n\n일부 모델이 검은색으로 나오는데요?\n     저희는 DLC에셋을 일부 사용 중입니다, 따라서 DLC가 없으시다면 일부는 검은색 텍스쳐가 나올겁니다. 놀라지마세요. 그저 사소한 오류일뿐입니다. 이 문제를 해결하기 위해 텍스쳐 작업 중에 있으니, 업데이트를 확인해주세요.\n\n카이저라이히의 버그 테스트/아트/음악/코딩 작업을 하고 싶습니다, 어디서 연락을 취할 수 있을까요?\n     좋습니다! 우리의 디스코드나 포럼에 글을 쓰시거나, Zankoas에게 메세지를 남겨주세요.\n\n업데이트로 세이브파일이 깨졌습니다!\n     그건 올바른 질문이 아닙니다. 하지만 그 문제를 겪고 계신다면 세이브파일을 불러오시고 일시중지하지 마시고 다시 저장하신 다음, 다시 그걸 불러와보세요. 철인모드를 켜지 않는 것도 도움이 됩니다. 모두 안먹힌다면, 카이저라이히 포럼에서 이전버전을 받을 수 있다는 것을 명심하세요.\n\n카이저라이히와 관련된 다른게 있나요?\n     오직 창작마당에 올려져 있는 음악모드 뿐입니다. 창작마당이나 포럼에서 찾을 수 있으니, 금방 찾을 수 있기를 바래요."
 kr.political.25.a:0 "정치력점수 좀 가져갈 수 있겠어?"
 
 kr.political.26.t:0 "뉴스 사건"
@@ -28,6 +31,11 @@ kr.political.26.d:0 "저는 인터내셔널 뉴스 트리뷴의 사장입니다.
 kr.political.26.a:0 "모든걸 알려줘요, 모.든.걸!"
 kr.political.26.b:0 "중요 사건만 알려주세요."
 kr.political.26.c:0 "자잘한 것들도 알고 싶습니다."
+
+kr.political.260.t:0 "지역명 설정"
+kr.political.260.d:0 "이제부터, 저희는 플레이어들이 게임 내 지역명과 관련하여 두 가지 방식을 제공하기로 하였습니다. 첫번째 방식은, 쉽게 이해할 수 있고 가독성을 높인 영문독음 지명을 사용하는 방식입니다. 두번째 방식은 이전버전들 처럼 고유의 원어독음 지명을 사용하고, 특정 지역을 다른 국가가 점령했을 때, 그에 맞춰 해당국가의 언어에 맞게 지명이 유동적으로 변경되는 방식이 있습니다.\n\n\n경고! 영문독음 지명 방식은 지명을 바꾸는 어떠한 이벤트도 없을 것입니다. 이 즉슨 이 방식을 사용하게 될 경우 플레이하는 게임 내내 모든 지명이 고정되며, 변경되지 않을 것입니다."
+kr.political.260.a:0 "영문독음을 사용하겠습니다."
+kr.political.260.b:0 "이전버전 처럼 원어독음을 사용하겠습니다."
 
 #kr.political.27 moved to _KR_Political_Notice_l_english.yml
 
@@ -40,6 +48,22 @@ kr.political.40.t:0 "관계도 설정"
 kr.political.40.d:0 "이것을 보았다면, 버그를 제보해주세요!"
 kr.political.40.a:0 "진지하게, 신고하세요."
 
+### returning cores
+return_cores_to_ally:0 "Return [From.GetAdjective] Lands"
+return_cores_to_ally_desc:0 "The [Root.GetAdjective] government has been discussing what to do with the [From.GetAdjective] lands we currently occupy - land which we have no rightful claim to. Should we return the land to our [From.GetAdjective] allies?"
+KR_returned_land:0 "Returned Our Land"
+KR_will_not_return:0 "§Y[This.GetName]§! will §Rnot§! be returned\n"
+KR_will_return_rest:0 "All other states which are [return_to.GetAdjective] cores or claims will be returned to §Y[return_to.GetNameDef]§!\n"
+KR_will_return_all:0 "All owned states which are [return_to.GetAdjective] cores or claims will be returned to §Y[return_to.GetNameDef]§!\n"
+kr.political.75.t:0 "The [From.From.GetAdjective] Lands"
+kr.political.75.d:0 "The [Root.GetAdjective] government has been discussing what to do with the [return_to.GetAdjective] lands we currently occupy - land which we have no rightful claim to. Should we return the land to our [return_to.GetAdjective] allies?"
+kr.political.75.a:0 "Yes, return everything we hold."
+kr.political.75.b:0 "Give them everything but the most vital provinces."
+kr.political.75.c:0 "On second thought..."
+kr.political.76.t:0 "[From.GetNameDefCap] Returns Our Land"
+kr.political.76.d:0 "Our allies in [From.GetNameDefCap]"
+kr.political.76.a:0 "Great!"
+
 KR_different_ideology:0 "다른 이념"
 KR_similar_ideology:0 "비슷한 이념"
 KR_same_ideology:0 "같은 이념"
@@ -48,8 +72,8 @@ different_party_types:0 "기본"
 KR_ideology_allowed:0 "장관이 해당국가의 이념을 허락함"
 KR_factional_rivalry:0 "당파 경쟁"
 minister_available:0 "이 정부의 유형에서 장관을 사용할 수 있음"
-KR_is_socialist:0 "전체주의, 생디칼리즘 또는 급진사회주의 정부임"
-KR_is_not_socialist:0 "전체주의, 생디칼리즘 또는 급진사회주의 정부를 가지고 §R있지 않음§!"
+KR_is_socialist:0 "전체주의, 생디칼리즘 ,급진사회주의 혹은 생디칼리스트와 제휴한 사회민주주의 정부임"
+KR_is_not_socialist:0 "전체주의, 생디칼리즘, 급진사회주의 혹은 생디칼리스트와 제휴한 사회민주주의 정부를 가지고 §R있지 않음§!"
 KR_is_elected:0 "민주주의와 선출된 정부를 가지고 있음"
 KR_is_not_elected:0 "민주주의와 선출된 정부를 가지고 §R있지 않음§!"
 KR_is_democratic:0 "민주주의 정부를 가지고 있음"
@@ -81,7 +105,7 @@ send_in_the_army_desc:0 "우리나라의 무질서를 해결하는 방법은 군
 rally_public_support:0 "집회 지원"
 rally_public_support_desc:0 "우리는 일부 정치 권력과 산업의 후원을 통해 지지자들을 우리의 뜻을 지지할 수 있도록 인도할 것입니다. 물론 시간과 자원은 많이 들겠지만 장기적으로는 우리의 정치적 지위를 향상시킬 것입니다."
 solidify_control:0 "결속 통제"
-solidify_control_desc:0 "요령있게 일부 정치권력과 자원을 이용하여 우리의 정적들을 제거할 것입니다. 물론 정적들 전부를 없앨 수는 없겠지만, 일부를 제거하여 앞으로 우리의 행보가 탄탄대로를 걸을 수 있도록 할 것이며 우리의 정치권력이 장기유지될 수 있도록 할 것입니다."
+solidify_control_desc:0 "요령있게 일부 정치권력과 자원을 이용하여 우리의 정적들을 제거할 것입니다. 물론 정적들 전부를 없앨 수는 없지만, 일부를 제거하여 앞으로 우리의 행보가 탄탄대로를 걸을 수 있도록 할 것이며 우리의 정치권력이 장기유지될 수 있도록 할 것입니다."
 
 ### Economic Health ###
 boom_economy:0 "WIP" #Boom Economy WIP!!!
