--- a/Kaiserreich Korean Translation/localisation/KR_South_Africa_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_South_Africa_l_english.yml
@@ -10,7 +10,7 @@ SAF_market_liberal_party:0 "진보당"
 SAF_social_conservative_party:0 "자치당"
 SAF_authoritarian_democrat_party:0 "국민당"
 SAF_paternal_autocrat_party:0 "순수당"
-SAF_national_populist_party:0 "아프리카너 연대"
+SAF_national_populist_party:0 "아프리카인 연대"
 SAF_totalist_party_long:0 "남아프리카 전체주의당"
 SAF_radical_socialist_party_long:0 "국제 사회주의 연맹"
 SAF_syndicalist_party_long:0 "남아프리카 공산당"
@@ -128,7 +128,7 @@ SAF_rejoin_entente_desc:0 "Now that we have a firm grip on our internal politics
 SAF_the_restoration:0 "복원"
 SAF_the_restoration_desc:0 "We have been accepted back into the British Empire, the National Assembly today passing the Restoration Act - restoring the King's position as South Africa's head of state. The former premier, Jan Smuts, looks set to be appointed as Governor-General, however we now have to decide how much power that position can exercise on the Kings behalf."
 SAF_qualified_franchise_act:0 "Qualified Franchise Act"
-SAF_qualified_franchise_act_desc:0 "The Qualified Franchise Act requires all states use a derivative of the Cape Qaulified Franchise in their elections, to ensure native representation and integration into the political process of South Africa. Again, however, the extent this is implemented in the Afrikaner-dominant states is kept at the required minimum. Despite this, qualified franchise in the other states ensures that non whites of at least 'middle class' wealth and education are eligible. This is most prominent in the Cape, where the qualified franchise is the most inclusive and full adult suffrage is granted to the Coloured & Asiatic populations. The same is true in Natal for the Asiatics, with the second largest franchise in South Africa."
+SAF_qualified_franchise_act_desc:0 "The Qualified Franchise Act requires all states to ensure native representation and integration into the political process of South Africa. This is most prominent in the Cape, where the qualified franchise is the most inclusive and full adult suffrage is granted to the Coloured & Asiatic populations. The same is true in Natal for the Asiatics, with the second largest franchise in South Africa."
 SAF_united_south_africa:0 "단결된 남아프리카!"
 SAF_united_south_africa_desc:0 "With the federal model fully implemented and our laws revised to make the natives a full and functional arm of our country, South Africa is now a truly united nation."
 SAF_native_service:0 "원주민 복무"
