--- a/Kaiserreich Korean Translation/localisation/KR_Soviet_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Soviet_l_english.yml
@@ -6,7 +6,7 @@ SOV_COL_MILITIA:0 "코뮌 민병대"
 SOV_IND_ARMY:0 "산업군"
 SOV_ELECT_MIL:0 "군 조직"
 SOV_ELECT_NAT:0 "국제 생디칼리스트 세력"
-SOV_ELECT_KGB:0 "NKVD 탈취"
+SOV_ELECT_KGB:0 "NKVD 축출"
 SOV_ELECT_LEN:0 "신-레닌주의 세력"
 SOV_ELECT_TRU:0 "진성 생디칼리즘 세력"
 SOV_ELECT_REV:0 "세계 혁명 세력"
@@ -29,7 +29,6 @@ SOV_INT:0 "세계 혁명"
 SOV_REC:0 "인정된 독립"
 SOV_IDE:0 "이념적 차이"
 SOV_FRI:0 "소비에트-미국 협력 조약"
-SOV_POL:0 "폴란드 비즈니스"
 SOV_civil_war:0 "러시아 내전"
 
 ### Tooltips ###
@@ -485,7 +484,6 @@ sovf.70.b:0 "러시아와의 안정된 관계가 더 중요하다."
 sovf.71.t:0 "폴란드가 제국 조약에 가입하다"
 sovf.71.d:0 "The Germans accepted the Polish offer and invited them into the Mitteleuropa alliance. Now Their independence and territorial integrity are protected by the powerful German armed forces."
 sovf.71.a:0 "유감이군."
-sovf.71.b:0 "훌륭해!"
 sovf.72.t:0 "소비에트의 확장주의가 핀란드를 위협하다"
 sovf.72.d:0 "The recent resurgence of the Soviet state in the east together with recent soviet diplomatic activity through the eastern Europe proves, that in order to keep our state, its independence and its borders intact, we need to gain protection of German Empire and Mitteleuropa alliance. However, doing will mean definite military involvement of our state in any potential conflict in the Western Europe and may further worsen our relations with Soviet Russia. What shall we do?"
 sovf.72.a:0 "독일 제국에 보호를 요청한다"
@@ -517,8 +515,8 @@ sovf.79.b:0 "핀란드를 독립시킨다"
 sovf.80.t:0 "핀란드 합병"
 sovf.80.d:0 "이전에 핀란드 지역이였던 곳들이 현재는 성장해가고 있는 우리의 조국에 확고히 통합되었습니다."
 sovf.80.a:0 "훌륭해!"
-sovf.81.t:0 "벨로루시 합병"
-sovf.81.d:0 "The areas of the artificial state of Belorussia, created by the German Empire to weaken Russia, are now firmly integrated into our growing socialist motherland."
+sovf.81.t:0 "백루테니아 합병"
+sovf.81.d:0 "The areas of the artificial state of White Ruthenia, created by the German Empire to weaken Russia, are now firmly integrated into our growing socialist motherland."
 sovf.82.t:0 "우크라니아 합병"
 sovf.82.d:0 "The areas of the artificial state of Ukraine, created by the German Empire to weaken Russia, are now firmly integrated into our growing socialist motherland."
 sovf.83.t:0 "발트 연합 공국 합병"
