--- a/Kaiserreich Korean Translation/localisation/KR_Togoland_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Togoland_l_english.yml
@@ -1,8 +1,8 @@
-﻿l_english:
+l_english:
 
 ### Parties ###
-TOG_social_democrat_party:0 "Jugend"
-TOG_social_democrat_party_long:0 "Togoische Jugendbewegung"
+TOG_social_democrat_party:0 "Jugendbewegung"
+TOG_social_democrat_party_long:0 "Togolesische Jugendbewegung"
 TOG_social_conservative_party:0 "UHVN"
 TOG_social_conservative_party_long:0 "Union der Häuptlinge und Völker des Nordens"
 TOG_authoritarian_democrat_party:0 "TH"
@@ -18,9 +18,9 @@ TOG_market_liberal_party_long:0 "Togolesische Fortschrittspartei"
 TOG_radical_socialist_party:0 "TA"
 TOG_radical_socialist_party_long:0 "Togolesische Arbeiterallianz"
 TOG_syndicalist_party:0 "TS"
-TOG_syndicalist_party_long:0 "Togoische Syndikusbewegung"
+TOG_syndicalist_party_long:0 "Syndikalistische Bewegung Togos"
 TOG_totalist_party:0 "Revolutionskomitee"
-TOG_totalist_party_long:0 "Togoischen Revolutionskomitee"
+TOG_totalist_party_long:0 "Togolesisches Revolutionskomitee"
 
 
 TOG_stablizing_situation:0 "Stabilizing Situation"
